Check in latest changes

--- a/other_notebooks/ambiguity_discovery_experiments.ipynb
+++ b/other_notebooks/ambiguity_discovery_experiments.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/adeft/.virtualenvs/adeft_env/lib/python3.8/site-packages/pandas/compat/__init__.py:120: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import json\n",
@@ -57,48 +66,38 @@
     {
      "data": {
       "text/plain": [
-       "[('readonly', 'fast_raw_pa_link', 'tester', None, True, False, False, False),\n",
-       " ('public', 'raw_muts', 'tester', None, True, False, True, False),\n",
+       "[('public', 'raw_muts', 'tester', None, True, False, True, False),\n",
        " ('public', 'rejected_statements', 'tester', None, True, False, True, False),\n",
        " ('public', 'reading_updates', 'tester', None, True, False, False, False),\n",
-       " ('public', 'raw_mods', 'tester', None, True, False, True, False),\n",
        " ('public', 'raw_agents', 'tester', None, True, False, True, False),\n",
-       " ('public', 'raw_statements', 'tester', None, True, False, True, False),\n",
        " ('public', 'raw_activity', 'tester', None, True, False, True, False),\n",
-       " ('readonly', 'pa_agent_counts', 'tester', None, True, False, False, False),\n",
        " ('public', 'pa_statements', 'tester', None, True, False, True, False),\n",
-       " ('readonly', 'name_meta', 'tester', None, True, False, False, False),\n",
-       " ('public', 'pa_activity', 'tester', None, True, False, True, False),\n",
-       " ('public', 'source_file', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'pa_stmt_src', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'evidence_counts', 'tester', None, True, False, False, False),\n",
-       " ('public', 'updates', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'reading_ref_link', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'pa_ref_link', 'tester', None, True, False, False, False),\n",
-       " ('public', 'preassembly_updates', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'pa_meta', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'raw_stmt_mesh', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'other_meta', 'tester', None, True, False, False, False),\n",
-       " ('public', 'doi_lookup', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'mesh_meta', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'source_meta', 'tester', None, True, False, False, False),\n",
        " ('public', 'pa_agents', 'tester', None, True, False, True, False),\n",
-       " ('public', 'auth', 'tester', None, True, False, False, False),\n",
-       " ('public', 'db_info', 'tester', None, True, False, True, False),\n",
-       " ('public', 'curation', 'tester', None, True, False, False, False),\n",
+       " ('public', 'source_file', 'tester', None, True, False, False, False),\n",
+       " ('public', 'raw_mods', 'tester', None, True, False, True, False),\n",
+       " ('public', 'updates', 'tester', None, True, False, False, False),\n",
+       " ('public', 'raw_unique_links', 'tester', None, True, False, True, False),\n",
+       " ('public', 'preassembly_updates', 'tester', None, True, False, False, False),\n",
        " ('public', 'pa_mods', 'tester', None, True, False, True, False),\n",
        " ('public', 'pa_muts', 'tester', None, True, False, True, False),\n",
-       " ('public', 'reading', 'tester', None, True, False, True, False),\n",
-       " ('public', 'mesh_ref_annotations', 'tester', None, True, False, False, False),\n",
-       " ('public', 'raw_unique_links', 'tester', None, True, False, True, False),\n",
+       " ('public', 'pa_statements_mid', 'tester', None, True, False, False, False),\n",
+       " ('public', 'pa_activity', 'tester', None, True, False, True, False),\n",
+       " ('public', 'doi_lookup', 'tester', None, True, False, False, False),\n",
        " ('public', 'pa_support_links', 'tester', None, True, False, True, False),\n",
        " ('public', 'discarded_statements', 'tester', None, True, False, True, False),\n",
-       " ('public', 'text_ref_old', 'tester', None, True, False, True, False),\n",
+       " ('public', 'raw_statements', 'tester', None, True, False, True, False),\n",
+       " ('public', 'auth', 'tester', None, True, False, False, False),\n",
+       " ('public', 'curation', 'tester', None, True, False, False, False),\n",
+       " ('public', 'db_info', 'tester', None, True, False, True, False),\n",
+       " ('public', 'reading', 'tester', None, True, False, True, False),\n",
        " ('public', 'text_ref', 'tester', None, True, False, True, False),\n",
        " ('public', 'text_content', 'tester', None, True, False, True, False),\n",
+       " ('public', 'text_ref_old', 'tester', None, True, False, False, False),\n",
        " ('public', 'xdd_updates', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'raw_stmt_src', 'tester', None, True, False, False, False),\n",
-       " ('readonly', 'text_meta', 'tester', None, True, False, False, False)]"
+       " ('public', 'pa_statements_old', 'tester', None, False, False, False, False),\n",
+       " ('public', 'curation_new', 'tester', None, False, False, False, False),\n",
+       " ('public', 'mti_ref_annotations_test', 'tester', None, True, False, False, False),\n",
+       " ('public', 'mesh_ref_annotations', 'tester', None, True, False, False, False)]"
       ]
      },
      "execution_count": 5,
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +152,7 @@
        " ('last_updated', 'timestamp without time zone')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,14 +169,15 @@
     {
      "data": {
       "text/plain": [
-       "[('id', 'integer'),\n",
-       " ('text_ref_id', 'integer'),\n",
+       "[('text_ref_id', 'integer'),\n",
        " ('source', 'character varying'),\n",
        " ('format', 'character varying'),\n",
        " ('text_type', 'character varying'),\n",
-       " ('content', 'bytea'),\n",
        " ('insert_date', 'timestamp without time zone'),\n",
-       " ('last_updated', 'timestamp without time zone')]"
+       " ('last_updated', 'timestamp without time zone'),\n",
+       " ('id', 'integer'),\n",
+       " ('content', 'bytea'),\n",
+       " ('preprint', 'boolean')]"
       ]
      },
      "execution_count": 8,
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,17 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('text_ref_ix', 'CREATE INDEX text_ref_ix ON public.raw_stmt_ref_link USING btree (text_ref_id)'),\n",
-       " ('stmt_id_ix', 'CREATE UNIQUE INDEX stmt_id_ix ON public.raw_stmt_ref_link USING btree (stmt_id)')]"
+       "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,6 +518,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('raw_agents_stmt_id_ag_num_index', 'CREATE INDEX raw_agents_stmt_id_ag_num_index ON public.raw_agents USING btree (stmt_id, ag_num)'),\n",
+       " ('fki_raw_agents_stmt_id_fkey', 'CREATE INDEX fki_raw_agents_stmt_id_fkey ON public.raw_agents USING btree (stmt_id)'),\n",
+       " ('raw_agents_db_id_idx', 'CREATE INDEX raw_agents_db_id_idx ON public.raw_agents USING btree (db_id COLLATE \"en_US.utf8\" varchar_ops)'),\n",
+       " ('raw_agents_db_name_idx', 'CREATE INDEX raw_agents_db_name_idx ON public.raw_agents USING btree (db_name COLLATE \"en_US.utf8\" varchar_ops)'),\n",
+       " ('raw_agents_pkey', 'CREATE UNIQUE INDEX raw_agents_pkey ON public.raw_agents USING btree (id)')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_indices('raw_agents')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"CREATE INDEX\n",
+    "               raw_agents_stmt_id_ag_num_index\n",
+    "           ON\n",
+    "               raw_agents\n",
+    "           USING\n",
+    "               btree (stmt_id, ag_num)\n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.result.ResultProxy at 0x7fb0e486aa30>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.session.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.rollback()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -548,6 +615,36 @@
    "metadata": {},
    "source": [
     "The output of this query has been pickled so we don't need to run it multiple times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "        SELECT x.stmt_id, x.ag_num, x.db_id, y.db_id\n",
+    "        FROM\n",
+    "            raw_agents x\n",
+    "        INNER JOIN\n",
+    "            raw_agents y\n",
+    "        ON x.stmt_id = y.stmt_id and x.ag_num = y.ag_num\n",
+    "        INNER JOIN\n",
+    "            raw_statements z\n",
+    "        ON x.stmt_id = z.id\n",
+    "        WHERE\n",
+    "            x.db_name = 'TEXT' AND y.db_name = 'HGNC' AND x.stmt_id IS NOT NULL\n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text2grounding = list(db.session.execute(query))"
    ]
   },
   {
@@ -3406,7 +3503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
